# git-rs

./: .gitignore  .travis.yml  README.md  appveyor.yml
ci/: buildRelease.js  bundle_git.ps1  bundle_git.sh  checkIsRelease.js  checkTomlSemver.js  package-lock.json  package.json
gitrs_client/: Cargo.toml
gitrs_server/: Cargo.toml  rustfmt.toml
gitrs_server/src/: config.rs  error.rs  main.rs  state.rs  types.rs
gitrs_server/src/client_handler/: channel.rs  message.rs  mod.rs  transport.rs
gitrs_server/src/client_handler/git_command/echo/: message.rs  mod.rs
gitrs_server/src/constants/: exit_code.rs  mod.rs  platform.rs
gitrs_server/src/dispatch/: dispatch.rs  mod.rs
gitrs_server/src/dispatch/git_command/: echo.rs  mod.rs  open_repo.rs  status.rs
gitrs_server/src/dispatch/git_command/bisect/: mod.rs  parse.rs
gitrs_server/src/dispatch/git_command/echo/: message.rs  mod.rs
gitrs_server/src/dispatch/git_command/log/: mod.rs  parse.rs
gitrs_server/src/dispatch/git_command/merge_base/: is_ancestor.rs  mod.rs
gitrs_server/src/dispatch/git_command/status/: mod.rs  status_entry.rs
gitrs_server/src/message/: git_command.rs  mod.rs
gitrs_server/src/message/git_command/: echo.rs  merge_base.rs  mod.rs  open_repo.rs
gitrs_server/src/util/: channel.rs  future_context.rs  git.rs  mod.rs  parse.rs  transport.rs
