[package]
name = "git_server"
version = "0.1.0"
authors = [
  "Tyler Wanek <tylerw@axosoft.com>",
  "Joshua Grosso <joshuag@axosoft.com>",
  "Jose Garcia <joseg@axosoft.com>",
  "Brandon Quan <brandonq@axosoft.com>"
]

[dependencies]
bytes = "0.4"
futures = "0.1"
nom = "4.0"
semver = { version = "0.9", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-process = { git = "https://github.com/alexcrichton/tokio-process", branch = "0.2.x" }
uuid = { version = "0.6", features = ["v4"] }
