[package]
name = "git_server"
version = "0.1.1"
authors = [
  "Tyler Wanek <tylerw@axosoft.com>",
  "Joshua Grosso <joshuag@axosoft.com>",
  "Jose Garcia <joseg@axosoft.com>",
  "Brandon Quan <brandonq@axosoft.com>",
  "Steve King Jr. <stevek@axosoft.com>"
]

[dependencies]
bytes = "0.4"
clap = "2.31"
futures = "0.1"
lazy_static = "1.0"
nom = "4.0"
semver = { version = "0.9", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
uuid = { version = "0.6", features = ["v4"] }
